@@ -1,2 +1,5 @@
 -Dmaven.conf=D:/soft/apache-maven-3.8.1/conf
 -Dmaven.repo.local=D:/mavenRepo
+--add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.util.Arrays=ALL-UNNAMED
